# scase-core

./: .gitignore  Container.pro  Container.pro.user.template  README.md  SCASE_Core.pro
App/: App.pro  CoreApp.pro  Doxyfile  mainwindow.h
CoreApp/: CoreApp.pro  Doxyfile  fooapp.cpp  fooapp.h  mainwindow.cpp
CoreCucumber/: CMakeLists.txt  taste_salad.sh
CoreCucumber/features/: initialization.feature
CoreCucumber/features/step_definitions/: BoostSCASECoreAppSteps.cpp
CoreLib/: CoreLib.pro  browser.cpp  browser.h  corelib.cpp  corelib.h
CoreLib/interfaces/: IBrowserPresentationDelegate.h
CoreTest/: CoreTest.pro  coretest.cpp  coretest.h  main.cpp
CucumberSalad/: CMakeLists.txt  taste_salad.sh
CucumberSalad/features/: initialization.feature
CucumberSalad/features/step_definitions/: CucumberSteps.cpp
Lib/: Lib.pro
Lib/interfaces/: IBrowserDelegate.h  IBrowserItem.h  IBrowserLevel.h  IPlugin.h
Test/: CoreTest.pro  coretest.cpp
tools/: build_pro_user.sh  taste_salad.sh  update_pro_user_template.sh
